[tool.poetry]
name = "survcc"
version = "0.1.0"
description = ""
authors = ["archettialberto <alberto1.archetti@mail.polimi.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13.0"
jupyter = "^1.1.1"
scikit-survival = ">=0.22.2,<0.23.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
pandas = "^2.2.3"
ipywidgets = "^8.1.5"
scipy = "^1.15.1"
pycox = "^0.3.0"
llvmlite = "^0.44.0"
numba = "^0.61.0"
torch = "^2.5.1"
xgboost = "^2.1.3"
fpboost = "^0.1.0"


[tool.poetry.group.code_quality.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
